pkgs/dartcv_core/src/imgproc.h

// SECTION - Image Filtering
// Applies the bilateral filter to an image.
// void cv::bilateralFilter (InputArray src, OutputArray dst, int d, double sigmaColor, double sigmaSpace, int borderType=BORDER_DEFAULT)
CvStatus *BilateralFilter(Mat src, Mat dst, int d, double sc, double ss);
// Blurs an image using the normalized box filter.
// void cv::blur (InputArray src, OutputArray dst, Size ksize, Point anchor=Point(-1,-1), int borderType=BORDER_DEFAULT)
CvStatus *Blur(Mat src, Mat dst, Size ps);
// Blurs an image using the box filter.
// void cv::boxFilter (InputArray src, OutputArray dst, int ddepth, Size ksize, Point anchor=Point(-1,-1), bool normalize=true, int borderType=BORDER_DEFAULT)
CvStatus *
BoxFilter(Mat src, Mat dst, int ddepth, Size ps, Point anchor, bool normalize, int borderType);
// TODO
// Remaps an image to polar or semilog-polar coordinates space.
// void cv::warpPolar (InputArray src, OutputArray dst, Size dsize, Point2f center, double maxRadius, int flags)

// SECTION - Miscellaneous Image Transformations
// Applies an adaptive threshold to an array.
// void cv::adaptiveThreshold (InputArray src, OutputArray dst, double maxValue, int adaptiveMethod, int thresholdType, int blockSize, double C)
CvStatus *AdaptiveThreshold(
    Mat src, Mat dst, double maxValue, int adaptiveTyp, int typ, int blockSize, double c
);
// SECTION - Drawing Functions

// Draws an arrow segment pointing from the first point to the second one.
// void cv::arrowedLine (InputOutputArray img, Point pt1, Point pt2, const Scalar &color, int thickness=1, int line_type=8, int shift=0, double tipLength=0.1)
CvStatus *ArrowedLine(
    Mat img,
    Point pt1,
    Point pt2,
    Scalar color,
    int thickness,
    int line_type,
    int shift,
    double tipLength
);
// Converts an image from one color space to another where the source image is stored in two planes.
// void cv::cvtColorTwoPlane (InputArray src1, InputArray src2, OutputArray dst, int code, AlgorithmHint hint=cv::ALGO_HINT_DEFAULT)

// main function for all demosaicing processes
// void cv::demosaicing (InputArray src, OutputArray dst, int code, int dstCn=0)

// SECTION - ColorMaps in OpenCV
// Applies a user colormap on a given image.
// void cv::applyColorMap (InputArray src, OutputArray dst, InputArray userColor)
CvStatus *ApplyCustomColorMap(Mat src, Mat dst, Mat colormap);
// Applies a GNU Octave/MATLAB equivalent colormap on a given image.
// void cv::applyColorMap (InputArray src, OutputArray dst, int colormap)
CvStatus *ApplyColorMap(Mat src, Mat dst, int colormap);
// float cv::wrapperEMD (InputArray signature1, InputArray signature2, int distType, InputArray cost=noArray(), Ptr< float > lowerBound=Ptr< float >(), OutputArray flow=noArray())

// SECTION - Structural Analysis and Shape Descriptors
// Approximates a polygonal curve(s) with the specified precision.
// void cv::approxPolyDP (InputArray curve, OutputArray approxCurve, double epsilon, bool closed)
CvStatus *ApproxPolyDP(VecPoint curve, double epsilon, bool closed, CVD_OUT VecPoint *rval);
// Approximates a polygon with a convex hull with a specified accuracy and number of sides.
// void cv::approxPolyN (InputArray curve, OutputArray approxCurve, int nsides, float epsilon_percentage=-1.0, bool ensure_convex=true)

// Calculates a contour perimeter or a curve length.
// double cv::arcLength (InputArray curve, bool closed)
CvStatus *ArcLength(VecPoint curve, bool is_closed, CVD_OUT double *rval);
// Calculates the up-right bounding rectangle of a point set or non-zero pixels of gray-scale image.
// Rect cv::boundingRect (InputArray array)
CvStatus *BoundingRect(VecPoint pts, Rect *rval);