packages/dartcv/lib/src/g/imgproc.g.dart

// coverage:ignore-file
// opencv_dart - OpenCV bindings for Dart language
//    some c wrappers were from gocv: https://github.com/hybridgroup/gocv
//    License: Apache-2.0 https://github.com/hybridgroup/gocv/blob/release/LICENSE.txt
// Author: Rainyl
// License: Apache-2.0
// Date: 2024/01/28

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;
import 'package:dartcv/src/g/types.g.dart' as imp1;

/// Native bindings for OpenCV - Imgproc
///
class CvNativeImgproc {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  CvNativeImgproc(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  CvNativeImgproc.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<CvStatus> AdaptiveThreshold(
    Mat src,
    Mat dst,
    double maxValue,
    int adaptiveTyp,
    int typ,
    int blockSize,
    double c,
  ) {
    return _AdaptiveThreshold(
      src,
      dst,
      maxValue,
      adaptiveTyp,
      typ,
      blockSize,
      c,
    );
  }

  late final _AdaptiveThresholdPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Double, ffi.Int, ffi.Int,
              ffi.Int, ffi.Double)>>('AdaptiveThreshold');
  late final _AdaptiveThreshold = _AdaptiveThresholdPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, double, int, int, int, double)>();

  ffi.Pointer<CvStatus> AdaptiveThreshold_Async(
    Mat src,
    double maxValue,
    int adaptiveTyp,
    int typ,
    int blockSize,
    double c,
    imp1.CvCallback_1 callback,
  ) {
    return _AdaptiveThreshold_Async(
      src,
      maxValue,
      adaptiveTyp,
      typ,
      blockSize,
      c,
      callback,
    );
  }

  late final _AdaptiveThreshold_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              imp1.CvCallback_1)>>('AdaptiveThreshold_Async');
  late final _AdaptiveThreshold_Async = _AdaptiveThreshold_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, double, int, int, int, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> ApplyColorMap(
    Mat src,
    Mat dst,
    int colormap,
  ) {
    return _ApplyColorMap(
      src,
      dst,
      colormap,
    );
  }

  late final _ApplyColorMapPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>>('ApplyColorMap');
  late final _ApplyColorMap = _ApplyColorMapPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int)>();

  ffi.Pointer<CvStatus> ApplyColorMap_Async(
    Mat src,
    int colormap,
    imp1.CvCallback_1 callback,
  ) {
    return _ApplyColorMap_Async(
      src,
      colormap,
      callback,
    );
  }

  late final _ApplyColorMap_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, imp1.CvCallback_1)>>('ApplyColorMap_Async');
  late final _ApplyColorMap_Async = _ApplyColorMap_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> ApplyCustomColorMap(
    Mat src,
    Mat dst,
    Mat colormap,
  ) {
    return _ApplyCustomColorMap(
      src,
      dst,
      colormap,
    );
  }

  late final _ApplyCustomColorMapPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>>(
      'ApplyCustomColorMap');
  late final _ApplyCustomColorMap = _ApplyCustomColorMapPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> ApplyCustomColorMap_Async(
    Mat src,
    Mat colormap,
    imp1.CvCallback_1 callback,
  ) {
    return _ApplyCustomColorMap_Async(
      src,
      colormap,
      callback,
    );
  }

  late final _ApplyCustomColorMap_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, imp1.CvCallback_1)>>('ApplyCustomColorMap_Async');
  late final _ApplyCustomColorMap_Async =
      _ApplyCustomColorMap_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> ApproxPolyDP(
    VecPoint curve,
    double epsilon,
    bool closed,
    ffi.Pointer<VecPoint> rval,
  ) {
    return _ApproxPolyDP(
      curve,
      epsilon,
      closed,
      rval,
    );
  }

  late final _ApproxPolyDPPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint, ffi.Double, ffi.Bool,
              ffi.Pointer<VecPoint>)>>('ApproxPolyDP');
  late final _ApproxPolyDP = _ApproxPolyDPPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecPoint, double, bool, ffi.Pointer<VecPoint>)>();

  ffi.Pointer<CvStatus> ApproxPolyDP_Async(
    VecPoint curve,
    double epsilon,
    bool closed,
    imp1.CvCallback_1 callback,
  ) {
    return _ApproxPolyDP_Async(
      curve,
      epsilon,
      closed,
      callback,
    );
  }

  late final _ApproxPolyDP_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint, ffi.Double, ffi.Bool,
              imp1.CvCallback_1)>>('ApproxPolyDP_Async');
  late final _ApproxPolyDP_Async = _ApproxPolyDP_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecPoint, double, bool, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> ArcLength(
    VecPoint curve,
    bool is_closed,
    ffi.Pointer<ffi.Double> rval,
  ) {
    return _ArcLength(
      curve,
      is_closed,
      rval,
    );
  }

  late final _ArcLengthPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, ffi.Bool, ffi.Pointer<ffi.Double>)>>('ArcLength');
  late final _ArcLength = _ArcLengthPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecPoint, bool, ffi.Pointer<ffi.Double>)>();

  ffi.Pointer<CvStatus> ArcLength_Async(
    VecPoint curve,
    bool is_closed,
    imp1.CvCallback_1 callback,
  ) {
    return _ArcLength_Async(
      curve,
      is_closed,
      callback,
    );
  }

  late final _ArcLength_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, ffi.Bool, imp1.CvCallback_1)>>('ArcLength_Async');
  late final _ArcLength_Async = _ArcLength_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, bool, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> ArrowedLine(
    Mat img,
    CvPoint pt1,
    CvPoint pt2,
    Scalar color,
    int thickness,
    int line_type,
    int shift,
    double tipLength,
  ) {
    return _ArrowedLine(
      img,
      pt1,
      pt2,
      color,
      thickness,
      line_type,
      shift,
      tipLength,
    );
  }

  late final _ArrowedLinePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, CvPoint, CvPoint, Scalar, ffi.Int,
              ffi.Int, ffi.Int, ffi.Double)>>('ArrowedLine');
  late final _ArrowedLine = _ArrowedLinePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, CvPoint, CvPoint, Scalar, int, int, int, double)>();

  ffi.Pointer<CvStatus> ArrowedLine_Async(
    Mat img,
    CvPoint pt1,
    CvPoint pt2,
    Scalar color,
    int thickness,
    int line_type,
    int shift,
    double tipLength,
    imp1.CvCallback_0 callback,
  ) {
    return _ArrowedLine_Async(
      img,
      pt1,
      pt2,
      color,
      thickness,
      line_type,
      shift,
      tipLength,
      callback,
    );
  }

  late final _ArrowedLine_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              CvPoint,
              CvPoint,
              Scalar,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              imp1.CvCallback_0)>>('ArrowedLine_Async');
  late final _ArrowedLine_Async = _ArrowedLine_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, CvPoint, CvPoint, Scalar, int, int,
          int, double, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> BilateralFilter(
    Mat src,
    Mat dst,
    int d,
    double sc,
    double ss,
  ) {
    return _BilateralFilter(
      src,
      dst,
      d,
      sc,
      ss,
    );
  }

  late final _BilateralFilterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, ffi.Int, ffi.Double, ffi.Double)>>('BilateralFilter');
  late final _BilateralFilter = _BilateralFilterPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, int, double, double)>();

  ffi.Pointer<CvStatus> BilateralFilter_Async(
    Mat src,
    int d,
    double sc,
    double ss,
    imp1.CvCallback_1 callback,
  ) {
    return _BilateralFilter_Async(
      src,
      d,
      sc,
      ss,
      callback,
    );
  }

  late final _BilateralFilter_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Double, ffi.Double,
              imp1.CvCallback_1)>>('BilateralFilter_Async');
  late final _BilateralFilter_Async = _BilateralFilter_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, int, double, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Blur(
    Mat src,
    Mat dst,
    CvSize ps,
  ) {
    return _Blur(
      src,
      dst,
      ps,
    );
  }

  late final _BlurPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, CvSize)>>(
      'Blur');
  late final _Blur =
      _BlurPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, CvSize)>();

  ffi.Pointer<CvStatus> Blur_Async(
    Mat src,
    CvSize ps,
    imp1.CvCallback_1 callback,
  ) {
    return _Blur_Async(
      src,
      ps,
      callback,
    );
  }

  late final _Blur_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, CvSize, imp1.CvCallback_1)>>('Blur_Async');
  late final _Blur_Async = _Blur_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, CvSize, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> BoundingRect(
    VecPoint pts,
    ffi.Pointer<CvRect> rval,
  ) {
    return _BoundingRect(
      pts,
      rval,
    );
  }

  late final _BoundingRectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, ffi.Pointer<CvRect>)>>('BoundingRect');
  late final _BoundingRect = _BoundingRectPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<CvRect>)>();

  ffi.Pointer<CvStatus> BoundingRect_Async(
    VecPoint pts,
    imp1.CvCallback_1 callback,
  ) {
    return _BoundingRect_Async(
      pts,
      callback,
    );
  }

  late final _BoundingRect_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, imp1.CvCallback_1)>>('BoundingRect_Async');
  late final _BoundingRect_Async = _BoundingRect_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> BoxFilter(
    Mat src,
    Mat dst,
    int ddepth,
    CvSize ps,
    CvPoint anchor,
    bool normalize,
    int borderType,
  ) {
    return _BoxFilter(
      src,
      dst,
      ddepth,
      ps,
      anchor,
      normalize,
      borderType,
    );
  }
